tests/negative/test_func_arg_name_duplicate.orb
fnc foo(i32 x, u32 y, f32 x) {}

fnc main() {}